random process eigenanalysis edits

--- a/common/random.tex
+++ b/common/random.tex
@@ -207,7 +207,6 @@ Let $\opR:\spX\to\spX$ be an auto-correlation operator.
 \end{align*}
 \end{proof}
 
-
 %---------------------------------------
 \begin{theorem}
 \footnote{
@@ -230,9 +229,6 @@ Let $\seq{\lambda_n}{n\in\Z}$ be the eigenvalues and
      \\
   4. & \norm{\psi_n(t)}^2>0, \inprod{\opR f}{f} > 0 \implies \lambda_n>0
      & (if $\opR$ is \prope{positive definite}, then eigenvalues are \prope{positive})
-     \\
-  5. & \pE\brb{\left| x(t)-\sum_{n\in\Z}\inprod{x(t)}{\psi_n(t)} \psi_n(t) \right|^2} = 0
-     & ($\{\psi_n(t)\}$ is a basis for $\rvx(t)$)
 \end{array}}
 \end{theorem}
 \begin{proof}
@@ -267,6 +263,53 @@ Because $\opR$ is self-adjoint, this property follows\ifsxref{operator}{thm:self
      && \text{by definition of norm induced by inner-product}
 \end{align*}
 
+\end{enumerate}
+\end{proof}
+
+
+%=======================================
+\section{Basis for random processes}
+\label{sec:KL}
+%=======================================
+If a random process $\rvx(t)$ is white
+\footnote{{\em white noise process}: random process $\rvx(t)$ with autocorrelation $\Rxx(\tau)=\delta(\tau)$}
+and $\Psi=\{\psi_1(t),\psi_2(t),\ldots,\psi_N(t)\}$ is \textbf{any} set of orthonormal basis functions,
+then the innerproducts
+$\inprod{n(t)}{\psi_n(t)}$ and $\inprod{n(t)}{\psi_m(t)}$ are \prope{uncorrelated}
+for $m\ne  n$.
+However, if $\rvx(t)$ is colored (not white), then the innerproducts are not
+in general uncorrelated.
+But if the elements of $\Psi$ are chosen to be the eigenfunctions of $\opR$ such
+that
+\[ \opR \psi_n = \lambda_n \psi_n,\]
+then by \prefp{thm:Rxx_prop}, $\{\psi_n(t)\}$ are orthogonal and
+the innerproducts \textbf{are} uncorrelated eventhough $\rvx(t)$ is
+not white.
+This criterion is called the  Karhunen-Lo\`{e}ve criterion for $\rvx(t)$.
+
+%---------------------------------------
+\begin{theorem}[\thmd{Karhunen-Lo/`eve Expansion}]
+\footnote{
+  \citerpp{keener}{114}{119}
+  }
+%---------------------------------------
+Let $\opR$ be the \ope{autocorrelation operator} of a \fncte{random process} $\rvx(t)$.
+\\
+\thmbox{
+  \brb{\begin{array}{FMD}
+      (A).&$\seq{\lambda_n}{n\in\Z}$ are the eigenvalues of $\opR$ & and
+    \\(B).&$\seq{\fpsi_n}{n\in\Z}$ are the eigenfunctions of $\opR$ & such that
+    \\(C).&$\opR \psi_n = \lambda_n \psi_n$
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{M}
+       $\ds\pE\brb{\abs{ x(t)-\sum_{n\in\Z}\inprod{x(t)}{\psi_n(t)} \psi_n(t) }^2} = 0$
+     \\($\setn{\psi_n(t)}$ is a \structe{basis} for $\rvx(t)$)
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{enumerate}
 \item $\{\psi_n(t)\}$ is a basis for $\rvx(t)$
       \[ \pE\brb{\left| x(t)-\sum_{n\in\Z}\dot{x}_n \psi_n(t) \right|^2} = 0
          \hspace{1cm}\mbox{where } \dot{x}_n\eqd \inprod{x(t)}{\psi_n(t)}
@@ -292,7 +335,7 @@ Because $\opR$ is self-adjoint, this property follows\ifsxref{operator}{thm:self
 \end{align*}
 
 
-Using these two results, we can prove the following:
+\item Using the previous two results, we can prove the following:
 
 \begin{align*}
   &\pE\brb{\left| x(t)-\sum_{n\in\Z}\dot{x}_n \psi_n(t) \right|^2}
@@ -306,32 +349,6 @@ Using these two results, we can prove the following:
 \end{align*}
 \end{enumerate}
 \end{proof}
-
-%=======================================
-\section{Karhunen-Lo\`{e}ve Expansion}
-\label{sec:KL}
-\index{Karhunen-Lo\`{e}ve Expansion}
-\index{eigenfunctions}
-\index{eigenvalues}
-%=======================================
-If a random process $\rvx(t)$ is white
-\footnote{{\em white noise process}: random process $\rvx(t)$ with autocorrelation $\Rxx(\tau)=\delta(\tau)$}
-and $\Psi=\{\psi_1(t),\psi_2(t),\ldots,\psi_N(t)\}$ is \textbf{any} set of orthonormal basis functions,
-then the innerproducts
-$\inprod{n(t)}{\psi_n(t)}$ and $\inprod{n(t)}{\psi_m(t)}$ are \prope{uncorrelated}
-for $m\ne  n$.
-However, if $\rvx(t)$ is colored (not white), then the innerproducts are not
-in general uncorrelated.
-But if the elements of $\Psi$ are chosen to be the eigenfunctions of $\opR$ such
-that
-\[ \opR \psi_n = \lambda_n \psi_n,\]
-then by \prefp{thm:Rxx_prop}, $\{\psi_n(t)\}$ are orthogonal and
-the innerproducts \textbf{are} uncorrelated eventhough $\rvx(t)$ is
-not white.
-This criterion is called the  Karhunen-Lo\`{e}ve criterion for $\rvx(t)$.
-
-
-
 
 %=======================================
 \section{LTI Operations on non-stationary random processes}
