--- a/common/randomseq.tex
+++ b/common/randomseq.tex
@@ -562,6 +562,21 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
   \\&\eqd \opDTFT                             \brs{\fh^\ast(m) \conv \Rxx(m)}
   \\&\eqd \Fh^\ast(-\omega) \Swxx(\omega)
 \end{align*}
+
+\begin{align*}
+  \Swxy(\omega)
+    &\eqd \opDTFT\pE\Rxy(m)
+  \\&\eqd \opDTFT\pE\brs{\rvx(m)\rvy^\ast(0)}
+  \\&=    \opDTFT\pE\brs{\rvx(m-m)\rvy^\ast(0-m)}
+  \\&=    \opDTFT\pE\brs{\rvx(0)\brp{\sum_{k\in\Z} \fh(k)           \rvx(-m-k)}^\ast}
+  \\&=    \opDTFT\pE\brs{\rvx(0)     \sum_{k\in\Z} \fh^\ast(k)      \rvx^\ast(-m-k)}
+  \\&=    \opDTFT\pE\brs{            \sum_{k\in\Z} \fh^\ast(k)      \rvx(0)\rvx^\ast(-m-k)}
+  \\&=    \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx(0)\rvx^\ast(-m-k)}
+  \\&\eqd \opDTFT                    \sum_{k\in\Z} \fh^\ast(k) \Rxx(-m-k)
+  \\&\eqd \opDTFT                             \brs{\fh^\ast(m) \conv \Rxx(-m)}
+  \\&=    \opDTFT                             \brs{\fh^\ast(-n) \conv \Rxx(n)}
+  \\&\eqd \Fh^\ast(\omega) \Swxx(\omega)
+\end{align*}
 \end{proof}
 
 %---------------------------------------
