--- a/common/setstrct.tex
+++ b/common/setstrct.tex
@@ -1179,10 +1179,10 @@ Examples of commonly occurring set structures include
 \label{def:openset}
 \label{def:closedset}
 \footnote{
-  %\citerpp{davis2005}{41}{42} \\
+  %\citerpp{davis2005}{41}{42},
   \citerpg{munkres2000}{76}{0131816292},
-  %\citerpu{ab}{57}{0120502577} \\
-  %\citerp{vel1993}{3}  \\
+  %\citerpu{ab}{57}{0120502577},
+  %\citerp{vel1993}{3},
   \citor{riesz1909},
   \citor{hausdorff1914},
   \citePc{tietze1923}{cited by Thron page 18},
@@ -1194,7 +1194,7 @@ Examples of commonly occurring set structures include
 Let $\Gamma$ be a set with an arbitrary (possibly uncountable) number of elements.
 Let $\psetX$ be the \structe{power set} of a set $\setX$.
 \defbox{\begin{array}{M}\indxs{\topT}\indxs{\sssTx}
-  A family of sets $\topT\subseteq\psetX$ is a \hid{topology} on a set $\sid$ if
+  A family of sets $\topT\subseteq\psetX$ is a \structd{topology} on a set $\sid$ if
   \\\indentx
   $\begin{array}{F>{\ds}l>{\ds}lDD}
       1. & \szero \in \topT
@@ -1214,12 +1214,12 @@ Let $\psetX$ be the \structe{power set} of a set $\setX$.
          & (the union of an arbitrary number of open sets is open).
   \end{array}$
   \\
-  A \hid{topological space} is the pair $\topspace{\sid}{\topT}$.
-  An \hid{open set} is any member of $\topT$.\\
-  A \hid{closed set} is any set $\setD$ such that $\cmpD$ is open.\\
+  A \structd{topological space} is the pair $\topspace{\sid}{\topT}$.
+  An \structd{open set} is any member of $\topT$.\\
+  A \structd{closed set} is any set $\setD$ such that $\cmpD$ is \prope{open}.\\
   The set of topologies on a set $\sid$ is denoted $\sssT{\sid}$. That is,
-  \\\indentx$\ds\sssT{\sid} \eqd \set{\topT\sorel\pset{\sid}}{\text{$\topT$ is a topology}}$.
-  \\If $\setX$ is \prope{finite}, then $\topT$ is a \hid{topology on a finite set}, and (4.) can be replaced by 
+  \\\indentx$\ds\sssT{\sid} \eqd \set{\topT\sorel\pset{\sid}}{\text{$\topT$ is a \structd{topology}}}$.
+  \\If $\setX$ is \prope{finite}, then $\topT$ is a \structd{topology on a finite set}, and (4.) can be replaced by 
   \\\indentx$\setU,\setV\in\topT \quad\implies\quad \setU\setu\setV \in \topT$.
 \end{array}}
 \end{definition}
