--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1514,8 +1514,8 @@
 \newcommand{\algA}[0]{\mbfA}         %
 \renewcommand{\Re} [0]{\ensuremath{\mathOpp{R}_{\mathsfup{e}}}}
 \renewcommand{\Im} [0]{\ensuremath{\mathOpp{I}_{\mathsfup{m}}}}
-%20181116_deprecated%\newcommand{\Reb}[1]{\ensuremath{\Re\left[#1\right]}}
-%20181116_deprecated%\newcommand{\Imb}[1]{\ensuremath{\Im\left[#1\right]}}
+\newcommand{\Reb}[1]{\ensuremath{\Re\left[#1\right]}}
+\newcommand{\Imb}[1]{\ensuremath{\Im\left[#1\right]}}
 
 
 
@@ -1539,9 +1539,9 @@
  \newcommand{\psp} [0] {\mathsfup{P}}       % probability measure function
  \newcommand{\psL} [0] {\latL}       
  \newcommand{\ps}  [0] {\otriple{\pso}{\pse}{\psp}} % probability space
- %20181116_deprecated%\newcommand{\pP}[1]   {\psp\left\{#1\right\}}
- %20181116_deprecated%\newcommand{\pPa}[2]  {\psp\left\{\left[\left.\left.#1\right]\land\right[#2\right]\right\}}
- %20181116_deprecated%\newcommand{\pPc}[2]  {\psp\left\{\left. #1 \;\right|\; #2 \right\}}
+ \newcommand{\pP}[1]   {\psp\left\{#1\right\}}
+ \newcommand{\pPa}[2]  {\psp\left\{\left[\left.\left.#1\right]\land\right[#2\right]\right\}}
+ \newcommand{\pPc}[2]  {\psp\left\{\left. #1 \;\right|\; #2 \right\}} % deprecated
 %--------------------------------------
 % probability density functions
 %--------------------------------------
@@ -1780,16 +1780,16 @@
     \hfill\pencilFlat%                        pencil lying flat
   }
 
-%20181116_deprecated%\newenvironment{proofns}
-%20181116_deprecated%  {
-%20181116_deprecated%    \pencilTipDown%                       pencil with tip down
-%20181116_deprecated%    {\scshape\footnotesize Proof: }%
-%20181116_deprecated%    \begin{small}%                        change font size
-%20181116_deprecated%  }
-%20181116_deprecated%  {
-%20181116_deprecated%    \end{small}%                          end new font size
-%20181116_deprecated%    \hfill\pencilFlat%                    pencil lying flat
-%20181116_deprecated%  }
+\newenvironment{proofns}
+  {
+    \pencilTipDown%                       pencil with tip down
+    {\scshape\footnotesize Proof: }%
+    \begin{small}%                        change font size
+  }
+  {
+    \end{small}%                          end new font size
+    \hfill\pencilFlat%                    pencil lying flat
+  }
 
 %---------------------------------------
 % formula boxes
