--- a/common/spectral.tex
+++ b/common/spectral.tex
@@ -14,14 +14,14 @@
 %---------------------------------------
 \begin{definition}
 \label{def:eigen}
-\citetbl{
+\footnote{
   %\citerp{michel1993}{439}
-  \citerp{bollobas1999}{168} \\
-  \citor{descartes1637} \\
-  \citor{descartes1637e} \\
-  \citor{cayley1858} \\
-  \citorp{hilbert1904r1}{67} \\
-  \citor{hilbert1912}
+  \citerp{bollobas1999}{168},
+  \citer{descartes1637},
+  \citer{descartes1637e},
+  \citer{cayley1858},
+  \citerp{hilbert1904r1}{67},
+  \citer{hilbert1912},
   \cithr{steen1973}
   }
 %---------------------------------------
@@ -39,7 +39,7 @@ Let $\oppN(\opA)$ be the \hie{null space} of $\opA$.
 %--------------------------------------
 \begin{example}
 \label{ex:spec_D}
-\citep{pedersen2000}{79}
+\footnote{\citerp{pedersen2000}{79}}
 %--------------------------------------
 Let $\opD$ be the differntial operator.
 \exbox{\begin{array}{rcl@{\qquad}D}
@@ -94,7 +94,9 @@ to prove/disprove its claims.\problem
 \begin{definition}
 \label{def:op_res_set}
 \label{def:op_spectrum}
-\citep{michel1993}{439}
+\footnote{
+  \citerp{michel1993}{439}
+  }
 %---------------------------------------
 Let $\opA\in\clB{\spX}{\spY}$ be an operator over the linear spaces
 $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
@@ -118,9 +120,9 @@ $\spX=(\setX,F,\oplus,\otimes)$ and $\spY\eqd(\setY,F,\oplus,\otimes)$.
 %---------------------------------------
 \begin{definition}
 \label{def:op_spectrum_pcr}
-\citetbl{
-  \citerp{bollobas1999}{168} \\
-  %\citerp{michel1993}{440}
+\footnote{
+  \citerp{bollobas1999}{168},
+  %\citerp{michel1993}{440},
   \citorpp{hilbert1906r4}{169}{172}
   }
 %---------------------------------------
@@ -262,10 +264,12 @@ And which conditions it fails determines which component of the spectrum it is i
 
 %---------------------------------------
 \begin{theorem}
-\citep{michel1993}{440}
+\footnote{
+  \citerp{michel1993}{440}
+  }
 %---------------------------------------
 Let $\opA\in\clB{\spX}{\spY}$ be an operator.
-\formbox{
+\thmbox{
   \oppSpec(\opA) = \oppSpecp(\opA) \setu \oppSpecc(\opA) \setu \oppSpecr(\opA)
   }
 \end{theorem}
@@ -274,34 +278,34 @@ Let $\opA\in\clB{\spX}{\spY}$ be an operator.
 
 
 %---------------------------------------
-\begin{theorem}[Spectral Theorem]
-\citetbl{
-  \citerp{michel1993}{457} \\
+\begin{theorem}[\thmd{Spectral Theorem}]
+\footnote{
+  \citerp{michel1993}{457},
   \citerp{bollobas1999}{200}
   }
 \label{thm:spectral_theorem}
 \index{spectral theorem}
 \index{theorems!spectral theorem}
-\citetbl{
-  \citor{hilbert1906r4} \\
-  \citor{hilbert1912} \\
-  \citor{vonNeumann1929} \\
-  \citor{deWitt} \\
+\footnote{
+  \citer{hilbert1906r4},
+  \citer{hilbert1912},
+  \citer{vonNeumann1929},
+  \citer{deWitt}
   }
 %---------------------------------------
 Let $\opN\in\clFxy$ be an operator.
 \thmbox{\begin{array}{l}
-  \left.\begin{array}{ll}
-    1. & \mcom{\opNa\opN=\opN\opNa}{$\opN$ is \hie{normal}}\\
-    2. & \text{$\opN$ is \hie{compact}}
+  \left.\begin{array}{Fl}
+    (1). & \mcom{\opNa\opN=\opN\opNa}{$\opN$ is \hie{normal}}\\
+    (2). & \text{$\opN$ is \hie{compact}}
   \end{array}\right\}
   \qquad\implies\qquad
-  \left\{\begin{array}{l>{\ds}rc>{\ds}l}
-    1. & \opN &=& \sum_n \lambda_n \opP_n  \\
-    2. & \sum_n \opP_n &=& \opI \\
-    3. & \opP_n\opP_m &=& \kdelta_{n-m} \opP_n \\
-    4. & \oppDim(\spH_n) &<& \infty \\
-    5. & \mc{3}{l}{\seto{\set{\lambda_n}{\lambda_n\ne 0}}  \text{is countably infinite}} \\
+  \left\{\begin{array}{F>{\ds}rc>{\ds}l}
+    (1). & \opN &=& \sum_n \lambda_n \opP_n  \\
+    (2). & \sum_n \opP_n &=& \opI \\
+    (3). & \opP_n\opP_m &=& \kdelta_{n-m} \opP_n \\
+    (4). & \oppDim(\spH_n) &<& \infty \\
+    (5). & \mc{3}{l}{\seto{\set{\lambda_n}{\lambda_n\ne 0}}  \text{is \prope{countably infinite}}} \\
   \end{array}\right.
   \\
   where
